--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["prettier"],
+  "extends": ["prettier", "react-app", "react-app/jest"],
   "plugins": ["prettier", "only-warn"],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
