--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/functions/lib/**/*.js
+/functions/lib/**/*.js.map
+
 # dependencies
 /node_modules
 /.pnp
