--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Compiled cloud functions
 /functions/lib/**/*.js
 /functions/lib/**/*.js.map
 
+# Debug files
 /functions/*-debug.*
 
 # dependencies
