--- a/package.json
+++ b/package.json
@@ -26,7 +26,19 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "workbox-background-sync": "^6.5.2",
+    "workbox-broadcast-update": "^6.5.2",
+    "workbox-cacheable-response": "^6.5.2",
+    "workbox-core": "^6.5.2",
+    "workbox-expiration": "^6.5.2",
+    "workbox-google-analytics": "^6.5.2",
+    "workbox-navigation-preload": "^6.5.2",
+    "workbox-precaching": "^6.5.2",
+    "workbox-range-requests": "^6.5.2",
+    "workbox-routing": "^6.5.2",
+    "workbox-strategies": "^6.5.2",
+    "workbox-streams": "^6.5.2"
   },
   "scripts": {
     "dev": "react-scripts start",
