--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,23 +4,25 @@
   "description": "Espresso Wallet - A simple and free multi currency expense tracker!",
   "icons": [
     {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/pkng",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     },
     {
       "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "theme_color": "#f1f0ed",
   "background_color": "#f1f0ed",
-  "start_url": "/",
-  "background": {
-    "service_worker": "main.e1e693aa.js"
-  },
+  "start_url": ".",
   "display": "standalone"
 }
