--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,13 @@
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/pkng",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     },
     {
       "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     }
   ],
   "theme_color": "#f1f0ed",
